src/test/ui/static/static-region-bound.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-region-bound.rs:10:14
   |
LL |     let x = &id(3);
   |              ^^^^^ creates a temporary which is freed while still in use
LL |     f(x);
   |     ---- argument requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
